# ProjetoCG

./: README.md
Phase1/3d/: box.3d  cone.3d  cone_1_2_10_3.3d  cone_1_3_20_5.3d  plane_2_3.3d  teapot.3d
Phase1/data_structs/: Model.cpp  Model.hpp  Point.hpp  Settings.cpp  Settings.hpp
Phase1/engine/: engine.cpp
Phase1/outputs/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  engine  generator
Phase2/3d/: box_2_3.3d  ring.3d  sphere.3d  sphere_1_8_8.3d
Phase2/data_structs/: Group.cpp  Group.hpp  Model.cpp  Model.hpp  Point.cpp  Point.hpp  Settings.cpp  Settings.hpp  Transform.cpp  Transform.hpp
Phase2/demo_scenes/: solar_system.xml
Phase2/engine/: engine.cpp
Phase2/outputs/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  engine  generator
Phase3/3d/: bezier_10.3d  bezier_2.3d  box.3d  box_1_2.3d  box_1_4.3d  box_1_8.3d  cone.3d  cone_1_2_4_3.3d  cone_1_2_8_4.3d  cone_1_2_8_8.3d  plane.3d  sphere_1_10_10.3d  sphere_1_12_12.3d  sphere_1_16_16.3d  sphere_house.3d
Phase3/data_structs/: Group.cpp  Matrix.hpp  Model.cpp  Model.hpp  Point.cpp  Point.hpp  Settings.cpp  Settings.hpp  Transform.cpp  Transform.hpp
Phase3/demo_scenes/: solar_system.xml
Phase3/engine/: engine.cpp
Phase3/outputs/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  engine  generator
Phase4/3d/: bezier_10.3d  bezier_2.3d  box_2_3.3d  cone_1_2_4_3.3d  plane_2_3.3d  ring.3d  sphere.3d  sphere_1_8_8.3d
Phase4/data_structs/: Color.cpp  Color.hpp  Group.hpp  Light.cpp  Light.hpp  Matrix.cpp  Model.cpp  Model.hpp  Point.cpp  Point.hpp  Settings.cpp  Settings.hpp  Transform.hpp
Phase4/demo_scenes/: solar_system.xml
Phase4/demo_scenes/help_functions/: calcPointsCircle.py  calcPointsElipse.py
Phase4/engine/: engine.cpp
Phase4/outputs/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  engine  generator
Phase4/test_files/: teapot.xml
